--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "@astrojs/partytown": "^2.0.0",
     "astro": "^3.1.0"
+  },
+  "devDependencies": {
+    "@astrojs/ts-plugin": "^1.1.3"
   }
 }
