--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro": "^3.1.0"
   },
   "devDependencies": {
-    "@astrojs/ts-plugin": "^1.1.3"
+    "@astrojs/ts-plugin": "^1.1.3",
+    "astro-robots-txt": "^1.0.0"
   }
 }
