--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/partytown": "^2.0.0",
+    "@astrojs/prefetch": "^0.4.0",
     "astro": "^3.1.0"
   },
   "devDependencies": {
