--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.1.3",
+    "astro-adoc": "^0.3.0",
     "astro-robots-txt": "^1.0.0",
     "sass": "^1.68.0"
   }
