--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@astrojs/partytown": "^2.0.0",
     "@astrojs/prefetch": "^0.4.0",
-    "astro": "^3.1.0"
+    "astro": "^3.1.0",
+    "astrojs-service-worker": "^1.1.0"
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.1.3",
